Add raw scraper batch admin API
